# crab

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  SUPPORT.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: agent_loop_feedback.yml  bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
bundled-skills/office/docx-edit/: DOCX.md  SKILL.md
bundled-skills/office/office-router/: SKILL.md
bundled-skills/office/pptx-review/: PPTX.md  SKILL.md
bundled-skills/office/xlsx-edit/: SKILL.md  XLSX.md
bundled-skills/slides/slidev-deck/: SKILL.md
desktop-shell/: README.md  next.config.mjs  package-lock.json  package.json
desktop-shell/app/: globals.css  layout.tsx  page.tsx
desktop-shell/app/(web)/: layout.tsx
desktop-shell/components/: docx-file-preview.tsx  pdf-file-preview.tsx
desktop-shell/components/desktop/: app-top-bar.tsx  notice-stack.tsx  (+2 more)
desktop-shell/electron/: dev.mjs  main.mjs  preload.mjs  release.mjs
desktop-shell/lib/: desktop-workspaces.ts  desktop.ts  newapi.ts
desktop-shell/scripts/: run-dev.sh  run-release.sh
desktop-shell/src-tauri/: Cargo.toml  tauri.conf.json
desktop-shell/src-tauri/capabilities/: default.json
desktop-shell/src-tauri/icons/: icon.icns
desktop-shell/src-tauri/permissions/: hermes-agent.toml
desktop-shell/src-tauri/src/: commands.rs  lib.rs  main.rs
docs/: AGENT_LOOP.md  AGENT_LOOP_EVAL.md  ARCHITECTURE.md  BADGES_AND_TOPICS.md  COMPUTER_USE.md  COMPUTER_USE.zh-CN.md  DEMO_SCRIPT.md  DESKTOP_PACKAGING.md  DESKTOP_PACKAGING.zh-CN.md  FAQ.md  FAQ.zh-CN.md  FUTURE_VISION.md  INSTALL.md  INSTALL.zh-CN.md  LAUNCH_KIT.md  MAINTAINER_GUIDE.md  OPEN_SOURCE_REVIEW.md  PROJECT_OVERVIEW.md  PROMOTION_PLAYBOOK.md  QUICKSTART.md  QUICKSTART.zh-CN.md  README.md  RELEASE_PROCESS.md
examples/: README.md  coding-agent-workflow.md  document-office-workflow.md  research-browser-pdf-workflow.md
scripts/: agent-loop-eval.py  capture-screenshots.mjs  check-desktop-release.mjs  install.ps1  install.sh  package-desktop.mjs  package-desktop.sh  package-release.sh  pdf_extract.swift
src/: agent.rs  approval.rs  archive_db.rs  bridge.rs  browser_backend.rs  browser_state.rs  cli.rs  computer_use.rs  config.rs  context_compression.rs  context_limit_cache.rs  context_probe.rs  cron.rs  delegate_runs.rs  doctor.rs  events.rs  experience_store.rs  extensions.rs  goal_state.rs  lib.rs  llm.rs  main.rs  mcp.rs  memory.rs  memory_cards.rs  memory_semantic.rs  meta_pattern_store.rs  network_policy.rs  office_render.rs  pdf.rs  plugins.rs  privacy.rs  prompts.rs  providers.rs  request_recovery.rs  runtime.rs  runtime_control.rs  runtime_profile.rs  session.rs  shared_config.rs  (+12 more)
src/office/: mod.rs  native.rs
src/runtime/: manager.rs
src/tools/: archive_query_tool.rs  browser_back.rs  browser_click.rs  browser_eval.rs  browser_find.rs  browser_forward.rs  browser_get_images.rs  browser_hover.rs  browser_navigate.rs  browser_press.rs  browser_screenshot.rs  browser_scroll.rs  browser_select_option.rs  browser_snapshot.rs  browser_type.rs  browser_upload_file.rs  browser_wait.rs  computer_use.rs  context_module_tool.rs  cron_manage_tool.rs  delegate_task.rs  delegate_to_worker.rs  delete_file.rs  execute_code.rs  git_branch_tool.rs  git_diff_tool.rs  git_log_tool.rs  git_status_tool.rs  goal_state_tool.rs  list_files.rs  mcp_call_tool.rs  mcp_dynamic_tool.rs  mcp_list_tools_tool.rs  memory_digest_tool.rs  memory_query_tool.rs  memory_tool.rs  mod.rs  move_file.rs  office_apply_ops.rs  office_create.rs  (+22 more)
(+13 files in other folders)
