[package]
name = "hermes-agent-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
bytes = "1.11"
calamine = "0.34"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
cron = "0.12"
docx-rs = "0.4.20"
futures-util = "0.3"
office2pdf = "0.5"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.48", features = ["io-util", "macros", "process", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rusqlite = { version = "0.37", features = ["bundled"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
walkdir = "2.5"
zip = "2.4"

[dev-dependencies]
tempfile = "3.20"
