[package]
name = "crab-desktop"
version = "0.1.4"
description = "Tauri desktop shell for Crab"
edition = "2024"
default-run = "crab-desktop"

[lib]
name = "crab_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
base64 = "0.22"
hermes-agent-rs = { package = "crab", path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
tokio = { version = "1.48", features = ["sync", "time"] }
